<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="AxisStop" Id="{d8bac268-a103-4f37-a01b-e341c61b0e22}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM AxisStop
VAR
	i				:USINT := 1;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//IF NOT bEmergencyStopBtn THEN
//	bAxis_All_Stop := TRUE;
//ELSE
//	bAxis_All_Stop := FALSE;
	
//END_IF


// 所有轴停止
//IF bAxis_All_Stop THEN
//	FOR i:=1 TO nAxisNum DO
//		aAxis_All_Stop_Group[i]^ := TRUE;
//	END_FOR
//ELSE
//	FOR i:=1 TO nAxisNum DO
//		aAxis_All_Stop_Group[i]^ := FALSE;
//	END_FOR
//END_IF



// LeftArm_Left_McStop
axis_LeftArm_Left_McStop(
	Axis:= axis_LeftArm_Left, 
	Execute:= bAxis_LeftArm_Left_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
// LeftArm_Right_McStop
axis_LeftArm_Right_McStop(
	Axis:= axis_LeftArm_Right, 
	Execute:= bAxis_LeftArm_Right_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
// LeftArm_Wrist_McStop	
axis_LeftArm_Wrist_McStop(
	Axis:= axis_LeftArm_Wrist, 
	Execute:= bAxis_LeftArm_Wrist_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );

// LeftArm_Lift_McStop		
axis_LeftArm_Lift_McStop(
	Axis:= axis_LeftArm_Lift, 
	Execute:= bAxis_LeftArm_Lift_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );

	
// RightArm_Left_McStop
axis_RightArm_Left_McStop(
	Axis:= axis_RightArm_Left, 
	Execute:= bAxis_RightArm_Left_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
// RightArm_Right_McStop
axis_RightArm_Right_McStop(
	Axis:= axis_RightArm_Right, 
	Execute:= bAxis_RightArm_Right_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
// RightArm_Wrist_McStop	
axis_RightArm_Wrist_McStop(
	Axis:= axis_RightArm_Wrist, 
	Execute:= bAxis_RightArm_Wrist_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );

// RightArm_Lift_McStop		
axis_RightArm_Lift_McStop(
	Axis:= axis_RightArm_Lift, 
	Execute:= bAxis_RightArm_Lift_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );

// BigGate_Left_McStop	
axis_BigGate_Left_McStop(
	Axis:= axis_BigGate_Left, 
	Execute:= bAxis_BigGate_Left_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
// BigGate_Right_McStop
axis_BigGate_Right_McStop(
	Axis:= axis_BigGate_Right, 
	Execute:= bAxis_BigGate_Right_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
// SmallGate_Left_McStop	
axis_SmallGate_Left_McStop(
	Axis:= axis_SmallGate_Left, 
	Execute:= bAxis_SmallGate_Left_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
// SmallGate_Right_McStop
axis_SmallGate_Right_McStop(
	Axis:= axis_SmallGate_Right, 
	Execute:= bAxis_SmallGate_Right_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
	
// BackGate_Left_McStop	
axis_BackGate_Left_McStop(
	Axis:= axis_BackGate_Left, 
	Execute:= bAxis_BackGate_Left_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
// BackGate_Right_McStop
axis_BackGate_Right_McStop(
	Axis:= axis_BackGate_Right, 
	Execute:= bAxis_BackGate_Right_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
axis_LeftWheel_Steer_McStop(
	Axis:= axis_LeftWheel_Steer, 
	Execute:= bAxis_LeftWheel_Steer_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
axis_LeftWheel_Walk_McStop(
	Axis:= axis_LeftWheel_Walk, 
	Execute:= bAxis_LeftWheel_Walk_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
axis_RightWheel_Steer_McStop(
	Axis:= axis_RightWheel_Steer, 
	Execute:= bAxis_RightWheel_Steer_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
axis_RightWheel_Walk_McStop(
	Axis:= axis_RightWheel_Walk, 
	Execute:= bAxis_RightWheel_Walk_McStop OR bAxis_All_Stop OR NOT bEmergencyStopBtn, 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
]]></ST>
    </Implementation>
    <LineIds Name="AxisStop">
      <LineId Id="285" Count="0" />
      <LineId Id="288" Count="0" />
      <LineId Id="292" Count="2" />
      <LineId Id="289" Count="0" />
      <LineId Id="286" Count="1" />
      <LineId Id="220" Count="8" />
      <LineId Id="218" Count="0" />
      <LineId Id="304" Count="0" />
      <LineId Id="303" Count="0" />
      <LineId Id="219" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="17" Count="10" />
      <LineId Id="5" Count="0" />
      <LineId Id="68" Count="1" />
      <LineId Id="30" Count="10" />
      <LineId Id="29" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="43" Count="10" />
      <LineId Id="42" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="56" Count="10" />
      <LineId Id="55" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="75" Count="53" />
      <LineId Id="74" Count="0" />
      <LineId Id="130" Count="1" />
      <LineId Id="133" Count="24" />
      <LineId Id="132" Count="0" />
      <LineId Id="158" Count="0" />
      <LineId Id="160" Count="25" />
      <LineId Id="159" Count="0" />
      <LineId Id="186" Count="1" />
      <LineId Id="189" Count="25" />
      <LineId Id="188" Count="0" />
      <LineId Id="233" Count="0" />
      <LineId Id="235" Count="10" />
      <LineId Id="234" Count="0" />
      <LineId Id="246" Count="0" />
      <LineId Id="248" Count="10" />
      <LineId Id="247" Count="0" />
      <LineId Id="259" Count="0" />
      <LineId Id="261" Count="10" />
      <LineId Id="260" Count="0" />
      <LineId Id="272" Count="0" />
      <LineId Id="274" Count="10" />
      <LineId Id="273" Count="0" />
      <LineId Id="299" Count="0" />
      <LineId Id="302" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>