<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="Init" Id="{cd97dff0-3f6c-40b9-8e52-9fc869a93668}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION Init : BOOL
VAR_INPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IF NOT isInitialized THEN
	aAxisGroup[1]					:=axis_LeftArm_Wrist;
	aAxisGroup[2]					:=axis_LeftArm_Left;
	aAxisGroup[3]					:=axis_LeftArm_Right;
	aAxisGroup[4]					:=axis_LeftArm_Lift;
	aAxisGroup[5]					:=axis_RightArm_Wrist;
	aAxisGroup[6]					:=axis_RightArm_Left;
	aAxisGroup[7]					:=axis_RightArm_Right;
	aAxisGroup[8]					:=axis_RightArm_Lift;
	aAxisGroup[9]					:=axis_SmallGate_Left;
	aAxisGroup[10]					:=axis_SmallGate_Right;
	aAxisGroup[11]					:=axis_BigGate_Left;
	aAxisGroup[12]					:=axis_BigGate_Right;
	aAxisGroup[13]					:=axis_BackGate_Left;
	aAxisGroup[14]					:=axis_BackGate_Right;
	
//	aAxixPowerGroup[1]				:=axis_LeftArm_Wrist_Power;
//	aAxixPowerGroup[2]				:=axis_LeftArm_Left_Power;
//	aAxixPowerGroup[3]				:=axis_LeftArm_Right_Power;
//	aAxixPowerGroup[4]				:=axis_LeftArm_Lift_Power;
//	aAxixPowerGroup[5]				:=axis_RightArm_Wrist_Power;
//	aAxixPowerGroup[6]				:=axis_RightArm_Left_Power;
//	aAxixPowerGroup[7]				:=axis_RightArm_Right_Power;
//	aAxixPowerGroup[8]				:=axis_RightArm_Lift_Power;
//	aAxixPowerGroup[9]				:=axis_SmallGate_Left_Power;
//	aAxixPowerGroup[10]				:=axis_SmallGate_Right_Power;
//	aAxixPowerGroup[11]				:=axis_BigGate_Left_Power;
//	aAxixPowerGroup[12]				:=axis_BigGate_Right_Power;
//	aAxixPowerGroup[13]				:=axis_BackGate_Left_Power;
//	aAxixPowerGroup[14]				:=axis_BackGate_Right_Power;
	
	isInitialized := TRUE;

END_IF
]]></ST>
    </Implementation>
    <LineIds Name="Init">
      <LineId Id="31" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="34" Count="13" />
      <LineId Id="53" Count="1" />
      <LineId Id="60" Count="1" />
      <LineId Id="63" Count="10" />
      <LineId Id="79" Count="1" />
      <LineId Id="32" Count="1" />
      <LineId Id="30" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>